[B]*** 0.2.0 ***[/B]
- Added new functionality to browse your personal Subscriptions.
- Added new functionality to browse your personal Favorites.
- Existing functionality is extended to be able to browse more than one page with videos.
- Added a section "Setting" to set your username in www.vbox7.com for browsing your personal Subscriptins and Favorites. This username is not used for login.
- PlayVid function is changed to enable XBMC to handle watched video status.

[B]*** 0.1.3 ***[/B]
- Small change in "def Categories()" to parse correctly vbox7 category.

[B]*** 0.1.2 ***[/B]
- Modify thumbnail and icon image in addFolderListItem and addActionListItem for XBMC 11.0 and XBMC 12.0-Alpha7.

[B]*** 0.1.1 ***[/B]
- Workaround vbox7's js and cookie requirements

[B]*** 0.0.1 ***[/B]
- Initial release